fixing some styles from button and dark mode switch

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -4,6 +4,7 @@
   height: 2.5rem;
   border-radius: 5px;
   cursor: pointer;
+  color: $color-font;
   p {
     font-size: $font-text-mobile;
   }
