--- a/src/styles/pages/_experience.scss
+++ b/src/styles/pages/_experience.scss
@@ -23,3 +23,7 @@
 .cjXPf {
   font-size: 0.7rem !important;
 }
+
+.qLlNn {
+  padding: 0 !important;
+}
